content-repository-2.2.324-openshift.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      fabric8.io/iconUrl: https://cdn.rawgit.com/fabric8io/fabric8-devops/master/content-repository/src/main/fabric8/icon.svg
      fabric8.io/git-commit: 9e2f214937a1901aca93b4234880cfb83c33382d
      fabric8.io/scm-con-url: scm:git:git@github.com:fabric8io/fabric8-devops.git/content-repository
      fabric8.io/scm-url: http://github.com/fabric8io/fabric8-devops/content-repository
      fabric8.io/git-branch: release-v2.2.324
      fabric8.io/scm-devcon-url: scm:git:git@github.com:fabric8io/fabric8-devops.git/content-repository
      fabric8.io/scm-tag: fabric8-devops-2.0.1
    labels:
      provider: fabric8
      project: content-repository
      version: 2.2.324
      group: io.fabric8.devops.apps
      expose: "true"
    name: content-repository
  spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      project: content-repository
      provider: fabric8
      group: io.fabric8.devops.apps
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      fabric8.io/iconUrl: https://cdn.rawgit.com/fabric8io/fabric8-devops/master/content-repository/src/main/fabric8/icon.svg
      fabric8.io/git-commit: 9e2f214937a1901aca93b4234880cfb83c33382d
      fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=content-repository&var-version=2.2.324
      fabric8.io/scm-con-url: scm:git:git@github.com:fabric8io/fabric8-devops.git/content-repository
      fabric8.io/scm-url: http://github.com/fabric8io/fabric8-devops/content-repository
      fabric8.io/git-branch: release-v2.2.324
      fabric8.io/scm-devcon-url: scm:git:git@github.com:fabric8io/fabric8-devops.git/content-repository
      fabric8.io/scm-tag: fabric8-devops-2.0.1
    labels:
      provider: fabric8
      project: content-repository
      version: 2.2.324
      group: io.fabric8.devops.apps
    name: content-repository
  spec:
    replicas: 1
    selector:
      provider: fabric8
      project: content-repository
      group: io.fabric8.devops.apps
      version: 2.2.324
    template:
      metadata:
        annotations:
          fabric8.io/git-commit: 9e2f214937a1901aca93b4234880cfb83c33382d
          fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=content-repository&var-version=2.2.324
          fabric8.io/scm-con-url: scm:git:git@github.com:fabric8io/fabric8-devops.git/content-repository
          fabric8.io/scm-url: http://github.com/fabric8io/fabric8-devops/content-repository
          fabric8.io/iconUrl: https://cdn.rawgit.com/fabric8io/fabric8-devops/master/content-repository/src/main/fabric8/icon.svg
          fabric8.io/git-branch: release-v2.2.324
          fabric8.io/scm-devcon-url: scm:git:git@github.com:fabric8io/fabric8-devops.git/content-repository
          fabric8.io/scm-tag: fabric8-devops-2.0.1
        labels:
          provider: fabric8
          project: content-repository
          version: 2.2.324
          group: io.fabric8.devops.apps
      spec:
        containers:
        - env:
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: fabric8/alpine-caddy:2.2.324
          imagePullPolicy: IfNotPresent
          name: content-repository
          ports:
          - containerPort: 8080
            name: http
          resources:
            limits:
              cpu: "0"
              memory: "0"
            requests:
              cpu: "0"
              memory: "0"
          volumeMounts:
          - mountPath: /var/www/html
            name: content
            readOnly: false
        volumes:
        - name: content
    triggers:
    - type: ConfigChange
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      fabric8.io/iconUrl: https://cdn.rawgit.com/fabric8io/fabric8-devops/master/content-repository/src/main/fabric8/icon.svg
    labels:
      provider: fabric8
      project: content-repository
      version: 2.2.324
      group: io.fabric8.devops.apps
      expose: "true"
    name: content-repository
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: content-repository
