jenkins-openshift-2.2.324-openshift.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Secret
  metadata:
    labels:
      provider: fabric8
      project: jenkins-openshift
      version: 2.2.324
      group: io.fabric8.devops.apps
    name: jenkins-docker-cfg
  data:
    config.json: ""
  type: fabric8.io/jenkins-docker-cfg
- apiVersion: v1
  kind: Secret
  metadata:
    labels:
      provider: fabric8
      project: jenkins-openshift
      version: 2.2.324
      group: io.fabric8.devops.apps
    name: jenkins-git-ssh
  data:
    ssh-key: ""
    ssh-key.pub: ""
  type: fabric8.io/jenkins-git-ssh
- apiVersion: v1
  kind: Secret
  metadata:
    labels:
      provider: fabric8
      project: jenkins-openshift
      version: 2.2.324
      group: io.fabric8.devops.apps
    name: jenkins-hub-api-token
  data:
    hub: ""
  type: fabric8.io/jenkins-hub-api-token
- apiVersion: v1
  kind: Secret
  metadata:
    labels:
      provider: fabric8
      project: jenkins-openshift
      version: 2.2.324
      group: io.fabric8.devops.apps
    name: jenkins-maven-settings
  data:
    settings.xml: PHNldHRpbmdzPg0KICA8IS0tIHNldHMgdGhlIGxvY2FsIG1hdmVuIHJlcG9zaXRvcnkgb3V0c2lkZSBvZiB0aGUgfi8ubTIgZm9sZGVyIGZvciBlYXNpZXIgbW91bnRpbmcgb2Ygc2VjcmV0cyBhbmQgcmVwbyAtLT4NCiAgPGxvY2FsUmVwb3NpdG9yeT4ke3VzZXIuaG9tZX0vLm12bnJlcG9zaXRvcnk8L2xvY2FsUmVwb3NpdG9yeT4NCiAgPG1pcnJvcnM+DQogICAgPG1pcnJvcj4NCiAgICAgIDxpZD5uZXh1czwvaWQ+DQogICAgICA8bWlycm9yT2Y+ZXh0ZXJuYWw6KjwvbWlycm9yT2Y+DQogICAgICA8dXJsPmh0dHA6Ly9jZW50cmFsLm1hdmVuLm9yZy9tYXZlbjIvPC91cmw+DQogICAgPC9taXJyb3I+DQogIDwvbWlycm9ycz4NCg0KIC [...]
  type: fabric8.io/secret-maven-settings
- apiVersion: v1
  kind: Secret
  metadata:
    labels:
      provider: fabric8
      project: jenkins-openshift
      version: 2.2.324
      group: io.fabric8.devops.apps
    name: jenkins-release-gpg
  data:
    trustdb.gpg: ""
    pubring.gpg: ""
    gpg.conf: ""
    secring.gpg: ""
  type: fabric8.io/jenkins-release-gpg
- apiVersion: v1
  kind: Secret
  metadata:
    labels:
      provider: fabric8
      project: jenkins-openshift
      version: 2.2.324
      group: io.fabric8.devops.apps
    name: jenkins-ssh-config
  data:
    config: ""
  type: fabric8.io/jenkins-ssh-config
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    annotations:
      serviceaccounts.openshift.io/oauth-redirectreference.jenkins: '{"kind":"OAuthRedirectReference","apiVersion":"v1","reference":{"kind":"Route","name":"jenkins"}}'
    labels:
      provider: fabric8
      project: jenkins-openshift
      version: 2.2.324
      group: io.fabric8.devops.apps
    name: jenkins
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      fabric8.io/app-menu: development
      fabric8.io/git-commit: 9e2f214937a1901aca93b4234880cfb83c33382d
      fabric8.io/scm-con-url: scm:git:git@github.com:fabric8io/fabric8-devops.git/jenkins-openshift
      fabric8.io/scm-url: http://github.com/fabric8io/fabric8-devops/jenkins-openshift
      fabric8.io/iconUrl: https://cdn.rawgit.com/fabric8io/fabric8-devops/master/jenkins-openshift/src/main/fabric8/icon.svg
      fabric8.io/git-branch: release-v2.2.324
      fabric8.io/scm-devcon-url: scm:git:git@github.com:fabric8io/fabric8-devops.git/jenkins-openshift
      fabric8.io/scm-tag: fabric8-devops-2.0.1
    labels:
      project: jenkins
      provider: fabric8
      expose: "false"
      version: 2.2.324
      group: io.fabric8.devops.apps
    name: jenkins
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      project: jenkins-openshift
      provider: fabric8
      group: io.fabric8.devops.apps
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      fabric8.io/git-commit: 9e2f214937a1901aca93b4234880cfb83c33382d
      fabric8.io/scm-con-url: scm:git:git@github.com:fabric8io/fabric8-devops.git/jenkins-openshift
      fabric8.io/scm-url: http://github.com/fabric8io/fabric8-devops/jenkins-openshift
      fabric8.io/iconUrl: https://cdn.rawgit.com/fabric8io/fabric8-devops/master/jenkins-openshift/src/main/fabric8/icon.svg
      fabric8.io/git-branch: release-v2.2.324
      fabric8.io/scm-devcon-url: scm:git:git@github.com:fabric8io/fabric8-devops.git/jenkins-openshift
      fabric8.io/scm-tag: fabric8-devops-2.0.1
    labels:
      project: jenkins
      provider: fabric8
      expose: "false"
      version: 2.2.324
      group: io.fabric8.devops.apps
    name: jenkins-jnlp
  spec:
    ports:
    - name: agent
      port: 50000
      protocol: TCP
      targetPort: 50000
    selector:
      project: jenkins-openshift
      provider: fabric8
      group: io.fabric8.devops.apps
- apiVersion: v1
  kind: RoleBinding
  metadata:
    labels:
      provider: fabric8
      project: jenkins-openshift
      version: 2.2.324
      group: io.fabric8.devops.apps
    name: edit-jenkins
  roleRef:
    name: edit
  subjects:
  - kind: ServiceAccount
    name: jenkins
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    annotations:
#      volume.beta.kubernetes.io/storage-class: standard
    labels:
      provider: fabric8
      project: jenkins-openshift
      version: 2.2.324
      group: io.fabric8.devops.apps
    name: jenkins-home
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    annotations:
#      volume.beta.kubernetes.io/storage-class: standard
    labels:
      provider: fabric8
      project: jenkins-openshift
      version: 2.2.324
      group: io.fabric8.devops.apps
    name: jenkins-mvn-local-repo
  spec:
    accessModes:
    - ReadWriteMany
    resources:
      requests:
        storage: 1Gi
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      fabric8.io/git-commit: 9e2f214937a1901aca93b4234880cfb83c33382d
      fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=jenkins-openshift&var-version=2.2.324
      fabric8.io/scm-con-url: scm:git:git@github.com:fabric8io/fabric8-devops.git/jenkins-openshift
      fabric8.io/scm-url: http://github.com/fabric8io/fabric8-devops/jenkins-openshift
      fabric8.io/iconUrl: https://cdn.rawgit.com/fabric8io/fabric8-devops/master/jenkins-openshift/src/main/fabric8/icon.svg
      fabric8.io/git-branch: release-v2.2.324
      fabric8.io/scm-devcon-url: scm:git:git@github.com:fabric8io/fabric8-devops.git/jenkins-openshift
      fabric8.io/scm-tag: fabric8-devops-2.0.1
    labels:
      fabric8.io/type: preview
      provider: fabric8
      project: jenkins-openshift
      version: 2.2.324
      group: io.fabric8.devops.apps
    name: jenkins
  spec:
    replicas: 1
    selector:
      project: jenkins-openshift
      provider: fabric8
      version: 2.2.324
      group: io.fabric8.devops.apps
    template:
      metadata:
        annotations:
          fabric8.io/git-commit: 9e2f214937a1901aca93b4234880cfb83c33382d
          fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=jenkins-openshift&var-version=2.2.324
          fabric8.io/scm-con-url: scm:git:git@github.com:fabric8io/fabric8-devops.git/jenkins-openshift
          fabric8.io/scm-url: http://github.com/fabric8io/fabric8-devops/jenkins-openshift
          fabric8.io/iconUrl: https://cdn.rawgit.com/fabric8io/fabric8-devops/master/jenkins-openshift/src/main/fabric8/icon.svg
          fabric8.io/git-branch: release-v2.2.324
          fabric8.io/scm-devcon-url: scm:git:git@github.com:fabric8io/fabric8-devops.git/jenkins-openshift
          fabric8.io/scm-tag: fabric8-devops-2.0.1
        labels:
          provider: fabric8
          project: jenkins-openshift
          version: 2.2.324
          group: io.fabric8.devops.apps
      spec:
        containers:
        - env:
          - name: GIT_COMMITTER_EMAIL
            value: fabric8@googlegroups.com
          - name: GIT_COMMITTER_NAME
            value: fabric8
          - name: OPENSHIFT_ENABLE_OAUTH
            value: "true"
          - name: OPENSHIFT_ENABLE_REDIRECT_PROMPT
            value: "true"
          - name: KUBERNETES_TRUST_CERTIFICATES
            value: "true"
          - name: KUBERNETES_MASTER
            value: https://kubernetes.default:443
          image: fabric8/jenkins-openshift:vf9ef32a
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 30
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 420
            timeoutSeconds: 3
          name: jenkins
          ports:
          - containerPort: 50000
            name: slave
          - containerPort: 8080
            name: http
          readinessProbe:
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 3
            timeoutSeconds: 3
          volumeMounts:
          - mountPath: /var/lib/jenkins
            name: jenkins-home
            readOnly: false
        serviceAccountName: jenkins
        volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-home
    triggers:
    - type: ConfigChange
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      provider: fabric8
      project: jenkins-openshift
      version: 2.2.324
      group: io.fabric8.devops.apps
    name: jenkins
  spec:
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: jenkins
